add column examId id to response